--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 
     <main class="main-content">
         <section class="promo-section">
-            <div class="slider" id="promo-slider"></div>
+            <div class="slider-container">
+                <div class="slider" id="promo-slider"></div>
+            </div>
             <div class="slider__dots" id="slider-dots"></div>
         </section>
 
