--- a/cart.html
+++ b/cart.html
@@ -25,7 +25,9 @@
 
     <main class="main-content">
         <section class="form-section summary-section">
-            <h2>Konfirmasi Pesanan</h2>
+            <div class="step-header">
+                <h2>Konfirmasi Pesanan</h2>
+            </div>
             <div class="summary-box">
                 <p>Silakan lakukan pembayaran melalui WhatsApp untuk memproses pesanan Anda.</p>
                 <div class="summary-item">
