--- a/game.html
+++ b/game.html
@@ -30,6 +30,8 @@
             <h1 class="game-title" id="game-title"></h1>
         </div>
 
+        <button id="back-button" class="btn back-btn"><i class="fas fa-arrow-left"></i> Kembali</button>
+
         <div class="form-container">
             <section class="form-section">
                 <div class="step-header">
@@ -106,8 +108,31 @@
         </div>
     </main>
 
+    <a href="https://wa.me/6282298902274" class="floating-wa" target="_blank">
+        <i class="fab fa-whatsapp"></i>
+    </a>
+
     <footer class="footer">
-        <p>&copy; 2024 Diamonds Store. All Rights Reserved.</p>
+        <div class="footer-content">
+            <div class="footer-section about">
+                <h2>Tentang Kami</h2>
+                <p>Diamonds Store adalah layanan top-up game online terpercaya, menyediakan diamond dan mata uang game lainnya dengan harga termurah dan proses tercepat.</p>
+            </div>
+            <div class="footer-section contact">
+                <h2>Hubungi Kami</h2>
+                <p><i class="fas fa-phone"></i> +62 822-9890-2274</p>
+                <p><i class="fas fa-envelope"></i> admin@diamonds-store.id</p>
+            </div>
+            <div class="footer-section social">
+                <h2>Ikuti Kami</h2>
+                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            &copy; 2024 Diamonds Store. All Rights Reserved.
+        </div>
     </footer>
 
     <script src="script.js" type="module"></script>
