--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diamonds Store - Top Up Murah</title>
+    <title>Diamonds Store - Top Up Game Murah</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 <body data-page="index">
 
@@ -26,20 +27,43 @@
     <main class="main-content">
         <section class="promo-section">
             <div class="slider-container">
-                <div class="slider" id="promo-slider"></div>
+                <div class="slider" id="promo-slider">
+                    </div>
             </div>
-            <div class="slider__dots" id="slider-dots"></div>
-        </section>
-
-        <section class="games-section">
-            <h2 class="section-title">Pilih Game Anda</h2>
-            <div class="games-grid" id="games-grid">
+            <div class="slider__dots" id="slider-dots">
                 </div>
         </section>
+
+        <h1 class="section-title">Pilih Game Anda</h1>
+        <section class="games-grid" id="games-grid">
+            </section>
     </main>
 
+    <a href="https://wa.me/6282298902274" class="floating-wa" target="_blank">
+        <i class="fab fa-whatsapp"></i>
+    </a>
+
     <footer class="footer">
-        <p>&copy; 2024 Diamonds Store. All Rights Reserved.</p>
+        <div class="footer-content">
+            <div class="footer-section about">
+                <h2>Tentang Kami</h2>
+                <p>Diamonds Store adalah layanan top-up game online terpercaya, menyediakan diamond dan mata uang game lainnya dengan harga termurah dan proses tercepat.</p>
+            </div>
+            <div class="footer-section contact">
+                <h2>Hubungi Kami</h2>
+                <p><i class="fas fa-phone"></i> +62 822-9890-2274</p>
+                <p><i class="fas fa-envelope"></i> admin@diamonds-store.id</p>
+            </div>
+            <div class="footer-section social">
+                <h2>Ikuti Kami</h2>
+                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            &copy; 2024 Diamonds Store. All Rights Reserved.
+        </div>
     </footer>
 
     <script src="script.js" type="module"></script>
