--- a/index.html
+++ b/index.html
@@ -3,69 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diamonds Store - Top Up Game Murah</title>
+    <title>Walz Shop - Top Up Games Murah & Cepat</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-<body data-page="index">
+<body>
 
     <header class="header">
-        <a href="index.html" class="logo">💎 Diamonds Store</a>
-        <button class="nav-toggle" aria-label="toggle navigation">
-            <span class="hamburger"></span>
-        </button>
-        <nav class="nav">
-            <ul class="nav__list">
-                <li class="nav__item"><a href="index.html" class="nav__link">Beranda</a></li>
-                <li class="nav__item"><a href="#" class="nav__link">Cara Beli</a></li>
-                <li class="nav__item"><a href="#" class="nav__link">Promo</a></li>
-                <li class="nav__item"><a href="cart.html" class="nav__link">Keranjang</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <a href="index.html" class="logo">
+                <i class="fas fa-gem logo-icon"></i>
+                <span class="logo-text">Walz Shop</span>
+            </a>
+            <nav class="nav">
+                <a href="index.html"><i class="fas fa-home"></i> Beranda</a>
+                <a href="#"><i class="fas fa-info-circle"></i> Tentang</a>
+                <a href="#"><i class="fas fa-headset"></i> Kontak</a>
+            </nav>
+        </div>
     </header>
 
-    <main class="main-content">
-        <section class="promo-section">
-            <div class="slider-container">
-                <div class="slider" id="promo-slider">
-                    </div>
-            </div>
-            <div class="slider__dots" id="slider-dots">
+    <main class="main">
+        <div class="container">
+            <section class="promo-section">
+                <div class="slider" id="promo-slider-container">
+                    <div class="slider__track" id="promo-slider"></div>
+                    <div class="slider__dots" id="slider-dots"></div>
                 </div>
-        </section>
-
-        <h1 class="section-title">Pilih Game Anda</h1>
-        <section class="games-grid" id="games-grid">
             </section>
+
+            <section class="games-section">
+                <h2 class="section-title">Pilih Game Favoritmu</h2>
+                <div class="games-grid" id="games-grid">
+                    </div>
+            </section>
+        </div>
     </main>
 
-    <a href="https://wa.me/6282298902274" class="floating-wa" target="_blank">
-        <i class="fab fa-whatsapp"></i>
-    </a>
-
     <footer class="footer">
-        <div class="footer-content">
-            <div class="footer-section about">
-                <h2>Tentang Kami</h2>
-                <p>Diamonds Store adalah layanan top-up game online terpercaya, menyediakan diamond dan mata uang game lainnya dengan harga termurah dan proses tercepat.</p>
+        <div class="container">
+            <p>&copy; 2025 Walz Shop. Semua hak dilindungi.</p>
+            <div class="footer-links">
+                <a href="#">Kebijakan Privasi</a>
+                <a href="#">Syarat & Ketentuan</a>
             </div>
-            <div class="footer-section contact">
-                <h2>Hubungi Kami</h2>
-                <p><i class="fas fa-phone"></i> +62 822-9890-2274</p>
-                <p><i class="fas fa-envelope"></i> admin@diamonds-store.id</p>
-            </div>
-            <div class="footer-section social">
-                <h2>Ikuti Kami</h2>
+            <div class="social-media">
+                <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
                 <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
                 <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
             </div>
         </div>
-        <div class="footer-bottom">
-            &copy; 2024 Diamonds Store. All Rights Reserved.
-        </div>
     </footer>
 
-    <script src="script.js" type="module"></script>
+    <script src="script.js"></script>
 </body>
 </html>
