--- a/index.html
+++ b/index.html
@@ -1,63 +1,53 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Walz Shop - Top Up Games Murah & Cepat</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>WalzShop — Top Up Game</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-
-  <!-- ========== HEADER ========== -->
   <header class="header">
     <div class="container">
-      <a href="index.html" class="logo">
-        <i class="fas fa-gem logo-icon"></i>
-        <span class="logo-text">Walz Shop</span>
-      </a>
+      <a href="index.html" class="logo"><span class="logo-icon">🎮</span> WalzShop</a>
       <nav class="nav">
-        <a href="index.html"><i class="fas fa-home"></i> Beranda</a>
-        <a href="#"><i class="fas fa-info-circle"></i> Tentang</a>
-        <a href="#"><i class="fas fa-headset"></i> Kontak</a>
+        <a href="index.html">Beranda</a>
+        <a href="#">Promo</a>
+        <a href="#">Bantuan</a>
       </nav>
     </div>
   </header>
-
-  <!-- ========== MAIN ========== -->
   <main class="main">
     <div class="container">
-      <section class="promo-section">
-        <div class="slider" id="promo-slider-container">
-          <div class="slider__track" id="promo-slider"></div>
-          <div class="slider__dots" id="slider-dots"></div>
+      <section class="slider">
+        <div class="slider__track" id="slider-track">
+          <img src="https://i.ibb.co/6b6kz1q/promo1.jpg" class="slider__item">
+          <img src="https://i.ibb.co/7rF3LRw/promo2.jpg" class="slider__item">
+          <img src="https://i.ibb.co/4Zr9Kx8/promo3.jpg" class="slider__item">
         </div>
+        <div class="slider__dots" id="slider-dots"></div>
       </section>
-
       <section class="games-section">
-        <h2 class="section-title">Pilih Game Favoritmu</h2>
+        <h2 class="section-title">Pilih Game</h2>
         <div class="games-grid" id="games-grid"></div>
       </section>
     </div>
   </main>
-
-  <!-- ========== FOOTER ========== -->
   <footer class="footer">
     <div class="container">
-      <p>&copy; 2025 Walz Shop. Semua hak dilindungi.</p>
+      <p>© 2025 WalzShop. All rights reserved.</p>
       <div class="footer-links">
         <a href="#">Kebijakan Privasi</a>
         <a href="#">Syarat & Ketentuan</a>
       </div>
       <div class="social-media">
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#">Facebook</a>
+        <a href="#">Instagram</a>
+        <a href="#">WhatsApp</a>
       </div>
     </div>
   </footer>
-
   <script src="script.js"></script>
 </body>
 </html>
